--- a/ivy/ivy-install.properties
+++ b/ivy/ivy-install.properties
@@ -5,15 +5,17 @@ ivy.repo.url=http://repo2.maven.org/maven2/org/apache/ivy/ivy/${ivy.version}/ivy
 ivy.antlib.xml=org/apache/ivy/ant/antlib.xml
 ivy.antlib.uri=antlib:org.apache.ivy.ant
 
+dist.dir=${root.dir}/dist
 jar.file=${build.dir}/${ant.project.name}.jar
 war.file=${build.dir}/${ant.project.name}.war
 module.version.target=2.0
-dist.dir=${root.dir}/dist
 war.target=local
 
 jc.debug=on
 jc.optimize=on
 jc.deprecation=on
+jc.encoding=utf-8
 jc.verbose=on
-jc.source=1.6
-jc.target=1.6
+jc.version=1.6
+jc.source=${jc.version}
+jc.target=${jc.version}
