--- a/.project
+++ b/.project
@@ -13,62 +13,12 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.apache.ivyde.eclipse.ivynature</nature>
 	</natures>
-	<filteredResources>
-		<filter>
-			<id>1353353379237</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-projectRelativePath-matches-false-false-lucene/build</arguments>
-			</matcher>
-		</filter>
-		<filter>
-			<id>1353353379238</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-projectRelativePath-matches-false-false-solr/build</arguments>
-			</matcher>
-		</filter>
-		<filter>
-			<id>1353353379240</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-projectRelativePath-matches-false-false-lucene/dist</arguments>
-			</matcher>
-		</filter>
-		<filter>
-			<id>1353353379242</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-projectRelativePath-matches-false-false-solr/package</arguments>
-			</matcher>
-		</filter>
-		<filter>
-			<id>1353353379244</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-projectRelativePath-matches-false-false-solr/dist</arguments>
-			</matcher>
-		</filter>
-		<filter>
-			<id>1353353379246</id>
-			<name></name>
-			<type>10</type>
-			<matcher>
-				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-name-matches-false-false-.svn</arguments>
-			</matcher>
-		</filter>
-	</filteredResources>
+	<linkedResources>
+		<link>
+			<name>${classes.dir}</name>
+			<type>2</type>
+			<location>/home/junjie/ide/luna/ant-ivy.git/${classes.dir}</location>
+		</link>
+	</linkedResources>
 </projectDescription>
