--- a/ivy/ivy-install.properties
+++ b/ivy/ivy-install.properties
@@ -12,7 +12,7 @@ module.version.target=1.0
 war.target=local
 
 jc.debug=on
-jc.optimize=on
+jc.optimize=off
 jc.deprecation=on
 jc.encoding=utf-8
 jc.verbose=on
