--- a/src/java/redis/ivy.xml
+++ b/src/java/redis/ivy.xml
@@ -1,7 +1,7 @@
 <ivy-module version="1.0">
     <info 
         organisation="org.mars"
-        module="lang"
+        module="redis"
         status="integration">
 		<ivyauthor name="junjiemars@gmail.com" />
 	</info>
@@ -18,4 +18,8 @@
 	</publications>
 	-->
 
+    <dependencies>
+    	<dependency org="redis.clients" name="jedis" rev="2.5.2" 
+    		conf="build->default" />
+    </dependencies>
 </ivy-module>
