--- a/src/java/redis/build.xml
+++ b/src/java/redis/build.xml
@@ -15,6 +15,11 @@
 
 	<path id="lib.path.id">
         <fileset dir="${lib.dir}" />
+        <!--
+        <fileset dir="${lib.dir}">
+            <include name="**/*.jar"/>
+        </fileset>
+        -->
     </path>
 
 	<import file="${ivy.dir}/ivy-install.xml"/>
