--- a/src/java/jcc/ivy.xml
+++ b/src/java/jcc/ivy.xml
@@ -1,7 +1,7 @@
 <ivy-module version="1.0">
     <info 
         organisation="org.mars"
-        module="redis"
+        module="jcc"
         status="integration">
 		<ivyauthor name="junjiemars@gmail.com" />
 	</info>
@@ -21,15 +21,7 @@
 	</publications>
 	-->
    <dependencies>
-    	<dependency org="redis.clients" name="jedis" rev="2.5.2" 
-    		conf="build->default,sources"/>
-    	<dependency org="org.springframework.data" name="spring-data-redis" 
-    		rev="1.3.2.RELEASE" conf="build->default,sources" />
-    	<dependency org="org.springframework.data" name="spring-data-jdbc-core" 
-    		rev="1.0.0.RELEASE" conf="build->default,sources" />
-    	<!--
-    	<dependency org="com.oracle" name="ojdbc14" rev="10.2.0.4.0"
-    		conf="build->default" />
-    	-->
-    </dependencies>
+   		<dependency org="net.java.dev.javacc" name="javacc" rev="6.1.2"
+   			conf="build->default" />
+   </dependencies>
 </ivy-module>
