--- a/src/java/jcc/build.xml
+++ b/src/java/jcc/build.xml
@@ -33,6 +33,7 @@
 	
     <target name="run" depends="cc,jar">
 		<java jar="${build.dir}/jcc.jar" fork="true">
+            <arg line=" 1+2+3+4+5"/>
 			<!--
 			<jvmarg value="-Xdebug" />
 			<jvmarg value="-Xrunjdwp:transport=dt_socket,suspend=y,address=8000"/>
