--- a/src/java/jlr/ivy.xml
+++ b/src/java/jlr/ivy.xml
@@ -22,6 +22,6 @@
 	-->
    <dependencies>
 	 		<dependency org="org.antlr" name="antlr4-runtime" rev="4.3"
-				conf="build->default" />
+				conf="build->default,sources" />
    </dependencies>
 </ivy-module>
