calc/eval is works

--- a/src/java/jlr/build.xml
+++ b/src/java/jlr/build.xml
@@ -32,6 +32,8 @@
 			<arg value="${ns.dir}/*.g"/>
 			<arg value="-o"/>
 			<arg value="${ns.dir}"/> 
+			<arg value="-no-listener"/>
+			<arg value="-visitor"/>
 		</exec>
 		<!--
 		<antlr target="${ns.dir}/jlr.g"
