--- a/src/java/jlr/build.xml
+++ b/src/java/jlr/build.xml
@@ -45,7 +45,7 @@
 	<target name="dcc" depends="cc,jar">
 		<exec executable="antlrt.sh" os="Mac OS X" spawn="false"
 				dir="${classes.dir}" 
-				inputstring="select id1,id2,id3 from t1 where id2=3 and (id1='a' or id3>.5);">
+				inputstring="select id1,id2,id3 from t1 where id2=3 and (id1='a' or id3>.5); insert into t2 (id1,id2) values(1,'a') where id3>=.314;">
 			<arg value="Sql"/>
 			<arg value="sql"/>
 			<arg value="-gui"/>
