--- a/src/java/jlr/build.xml
+++ b/src/java/jlr/build.xml
@@ -35,11 +35,12 @@
 			<arg value="-listener"/>
 			<arg value="-visitor"/>
 		</exec>
-		<!--
-		<antlr target="${ns.dir}/jlr.g"
-			outputdirectory="${ns.dir}/">
-		</antlr>
-		-->
+        <!--
+        <exec executable="java" spawn="false">
+            <arg value="-jar"/>
+            <arg value="${lib.dir}/antlr-complete.jar"
+        </exec>
+        -->
 	</target>
 	
 	<target name="dcc" depends="cc,jar">
